--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </div>
   </main>
   <footer>
-    <p class="footer-p">created by <a href="#" class="footer-a">Arda Eker</a> - devChallenges.io</p>
+    <p class="footer-p">created by <a href="https://devchallenges.io/portfolio/ardaeker" class="footer-a">Arda Eker</a>
+      - devChallenges.io</p>
   </footer>
 </body>
 
